[package]
edition = "2021"
name = "portal"
publish = false
version = "0.0.0"

[dependencies]
mpz-core.workspace = true
notary-server = {path = "../../notary-server"}
tlsn-core.workspace = true
tlsn-prover = {workspace = true, features = ["tracing"]}
tlsn-tls-client.workspace = true
tlsn-tls-core.workspace = true
tlsn-utils.workspace = true
tlsn-verifier.workspace = true
tlsn-formats.workspace = true
env_logger = "0.11.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.30.0"
once_cell = "1.19.0"

elliptic-curve = {version = "0.13.5", features = ["pkcs8"]}
p256 = {workspace = true, features = ["ecdsa"]}
webpki-roots.workspace = true

async-tls = {version = "0.12", default-features = false, features = [
  "client",
]}
chrono = "0.4"
futures.workspace = true
http-body-util = "0.1"
hyper = {version = "1.1", features = ["client", "http1"]}
hyper-util = {version = "0.1", features = ["full"]}
rustls = {version = "0.21"}
rustls-pemfile = {version = "1.0.2"}
tokio = {workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
]}
tokio-rustls = {version = "0.24.1"}
tokio-util.workspace = true

dotenv = "0.15.0"
eyre = "0.6.8"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0"
tracing-subscriber.workspace = true
tracing.workspace = true

regex = "1.10.3"
redis = "0.25.3"
actix-web = "4"